[package]
name = "enforcer_backend"
version = "0.1.1"
edition = "2021"
description = "backend for enforcer app"
license = "GPL-2.0"

[build]
rustc-wrapper="/home/user/.cargo/bin/sccache"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.47"
psutil = "3.2.2"
